Switch to immutable and lazy fields